[gd_scene load_steps=10 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=2]
[ext_resource path="res://button.png" type="Texture" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.203, 0.541, 2.083 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.35, 0.541, 0.404 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("gun2:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("gun2:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("gun2:scale:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:scale:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath(".:rotation_degrees:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 2.41, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath(".:rotation_degrees:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath(".:rotation_degrees:z")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("gun2:translation:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("gun2:translation:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( -0.330159, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("gun2:translation:z")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0.787252, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath(".:translation:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1.03, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath(".:translation:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( -0.305, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath(".:translation:z")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( -2.461, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "fire"
length = 0.1
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 23.246, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:translation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.03, -0.25, 0, 0.25, 0, 1.03, -0.25, 0, 0.25, 0, 1.03, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:translation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -0.305, -0.25, 0, 0.25, 0, -0.0326409, -0.25, 0, 0.25, 0, -0.305, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:translation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -2.461, -0.25, 0, 0.25, 0, -2.461, -0.25, 0, 0.25, 0, -2.461, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1 )
}

[sub_resource type="Animation" id=6]
resource_name = "reload"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("gun2:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -0.330159, -0.25, 0, 0.25, 0, -2.85711, -0.25, 0, 0.25, 0, -0.330159, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("gun2:translation:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.787252, -0.25, 0, 0.25, 0, 0.893603, -0.25, 0, 0.25, 0, 0.787252, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.5 )
}

[node name="player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.93075, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08937, -0.123181 )
current = true
far = 8192.0

[node name="gun" type="MeshInstance" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 0.999116, -0.04205, 0, 0.04205, 0.999116, 1.03, -0.305, -2.461 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="gun2" type="MeshInstance" parent="Camera/gun"]
transform = Transform( 1, 0, 0, 0, 0.999116, 0.04205, 0, -0.04205, 0.999116, 0, -0.330159, 0.787252 )
mesh = SubResource( 3 )
skeleton = NodePath("../../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera/gun"]
anims/RESET = SubResource( 4 )
anims/fire = SubResource( 5 )
anims/reload = SubResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Virtual joystick" parent="CanvasLayer/Control" instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="fire" type="TextureRect" parent="CanvasLayer/Control/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -326.0
margin_top = -254.0
margin_right = -251.0
margin_bottom = -179.0
texture = ExtResource( 3 )
expand = true

[node name="reload" type="TextureRect" parent="CanvasLayer/Control/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -417.0
margin_top = -193.0
margin_right = -342.0
margin_bottom = -118.0
texture = ExtResource( 3 )
expand = true

[node name="jump" type="TextureRect" parent="CanvasLayer/Control/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -468.0
margin_top = -108.0
margin_right = -393.0
margin_bottom = -33.0
texture = ExtResource( 3 )
expand = true

[connection signal="gui_input" from="CanvasLayer/Control/Control/fire" to="." method="_on_fire_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Control/Control/reload" to="." method="_on_reload_gui_input"]
[connection signal="gui_input" from="CanvasLayer/Control/Control/jump" to="." method="_on_jump_gui_input"]
